--- a/src/FakeNewsBigData.ipynb
+++ b/src/FakeNewsBigData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,23 +16,27 @@
     "from nltk.stem import PorterStemmer\n",
     "\n",
     "# to clean data faster we'll use the multiprocessing library\n",
-    "from multiprocessing import Pool"
+    "from multiprocessing import Pool\n",
+    "\n",
+    "# to clean data even faster we'll use the dask library to parallelize the cleaning process\n",
+    "import dask.dataframe as dd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# data = pd.read_csv('995,000_rows.csv')\n",
+    "data = pd.read_csv('995,000_rows.csv', engine = 'c', dtype = str)\n",
     "\n",
     "# print(data.head())\n",
     "\n",
     "def cleanText(text):\n",
     "    # lower case\n",
-    "    if isinstance(text, str):\n",
-    "        text = text.lower()\n",
+    "    if not isinstance(text, str):\n",
+    "        return text\n",
+    "    text = text.lower()\n",
     "\n",
     "    # should not contain multiple spaces, tabs or newlines\n",
     "    text = re.sub(r'\\s+', ' ', text)\n",
@@ -79,18 +83,257 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# take the data and make into a dask dataframe\n",
     "\n",
+    "# npartitions means that the data will be split into as many partitions as there are cores on the machine running the code\n",
+    "\n",
+    "\n",
+    "dask_df = dd.from_pandas(data, npartitions=32)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# dask_df contains the same data as data, but it's a dask dataframe which is a parallelized version of a pandas dataframe\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# this will parallelize the cleaning process \n",
+    "# dask_df['content'] = dask_df['content'].map(cleanText)\n",
+    "\n",
+    "# this will actually execute the cleaning process\n",
+    "# result = dask_df.compute()\n",
+    "\n",
+    "# print(result.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Unnamed: 0         id               domain        type  \\\n",
+      "0        732  7444726.0   nationalreview.com   political   \n",
+      "1       1348  6213642.0    beforeitsnews.com        fake   \n",
+      "2       7119  3867639.0     dailycurrant.com      satire   \n",
+      "3       1518  9560791.0          nytimes.com    reliable   \n",
+      "4       9345  2059625.0  infiniteunknown.net  conspiracy   \n",
+      "\n",
+      "                                                 url  \\\n",
+      "0  http://www.nationalreview.com/node/152734/%E2%...   \n",
+      "1  http://beforeitsnews.com/economy/2012/06/the-c...   \n",
+      "2  http://dailycurrant.com/2016/01/18/man-awoken-...   \n",
+      "3  https://query.nytimes.com/gst/fullpage.html?re...   \n",
+      "4  http://www.infiniteunknown.net/2011/09/14/100-...   \n",
+      "\n",
+      "                                             content  \\\n",
+      "0  Plus one article on Google Plus\\n\\n(Thanks to ...   \n",
+      "1  The Cost Of The Best Senate Banking Committee ...   \n",
+      "2  Man Awoken From 27-Year Coma Commits Suicide A...   \n",
+      "3  WHEN Julia Geist was asked to draw a picture o...   \n",
+      "4  – 100 Compiled Studies on Vaccine Dangers (Act...   \n",
+      "\n",
+      "                   scraped_at                 inserted_at  \\\n",
+      "0  2017-11-27T01:14:42.983556  2018-02-08 19:18:34.468038   \n",
+      "1    2017-11-27T01:14:08.7454  2018-02-08 19:18:34.468038   \n",
+      "2  2017-11-27T01:14:21.395055  2018-02-07 23:39:33.852671   \n",
+      "3  2018-02-11 00:46:42.632962  2018-02-11 00:14:20.346838   \n",
+      "4  2017-11-10T11:18:44.524042  2018-02-07 23:39:33.852671   \n",
+      "\n",
+      "                   updated_at  \\\n",
+      "0  2018-02-08 19:18:34.468066   \n",
+      "1  2018-02-08 19:18:34.468066   \n",
+      "2  2018-02-07 23:39:33.852696   \n",
+      "3  2018-02-11 00:14:20.346871   \n",
+      "4  2018-02-07 23:39:33.852696   \n",
+      "\n",
+      "                                               title authors keywords  \\\n",
+      "0                                 Iran News Round Up     NaN      NaN   \n",
+      "1  The Cost Of The Best Senate Banking Committee ...     NaN      NaN   \n",
+      "2  Man Awoken From 27-Year Coma Commits Suicide A...     NaN      NaN   \n",
+      "3  Opening a Gateway for Girls to Enter the Compu...     NaN      NaN   \n",
+      "4  100 Compiled Studies on Vaccine Dangers – Infi...     NaN      NaN   \n",
+      "\n",
+      "                                       meta_keywords  \\\n",
+      "0  ['National Review', 'National Review Online', ...   \n",
+      "1                                               ['']   \n",
+      "2                                               ['']   \n",
+      "3  ['Computers and the Internet', 'Women and Girl...   \n",
+      "4                                               ['']   \n",
+      "\n",
+      "                                    meta_description  \\\n",
+      "0                                                NaN   \n",
+      "1                                                NaN   \n",
+      "2                                                NaN   \n",
+      "3  WHEN Julia Geist was asked to draw a picture o...   \n",
+      "4                                                NaN   \n",
+      "\n",
+      "                                                tags summary   source  \n",
+      "0                                                NaN     NaN      NaN  \n",
+      "1                                                NaN     NaN      NaN  \n",
+      "2                                                NaN     NaN      NaN  \n",
+      "3                                                NaN     NaN  nytimes  \n",
+      "4  Lymphoma, Hepatitis B, Immune System, Health, ...     NaN      NaN  \n",
+      "  Unnamed: 0         id               domain        type  \\\n",
+      "0        732  7444726.0   nationalreview.com   political   \n",
+      "1       1348  6213642.0    beforeitsnews.com        fake   \n",
+      "2       7119  3867639.0     dailycurrant.com      satire   \n",
+      "3       1518  9560791.0          nytimes.com    reliable   \n",
+      "4       9345  2059625.0  infiniteunknown.net  conspiracy   \n",
+      "\n",
+      "                                                 url  \\\n",
+      "0  http://www.nationalreview.com/node/152734/%E2%...   \n",
+      "1  http://beforeitsnews.com/economy/2012/06/the-c...   \n",
+      "2  http://dailycurrant.com/2016/01/18/man-awoken-...   \n",
+      "3  https://query.nytimes.com/gst/fullpage.html?re...   \n",
+      "4  http://www.infiniteunknown.net/2011/09/14/100-...   \n",
+      "\n",
+      "                                             content  \\\n",
+      "0  plus one article on google plus thanks to ali ...   \n",
+      "1  the cost of the best senate banking committee ...   \n",
+      "2  man awoken from NUMyear coma commits suicide a...   \n",
+      "3  when julia geist was asked to draw a picture o...   \n",
+      "4   NUM compiled studies on vaccine dangers activ...   \n",
+      "\n",
+      "                   scraped_at                 inserted_at  \\\n",
+      "0  2017-11-27T01:14:42.983556  2018-02-08 19:18:34.468038   \n",
+      "1    2017-11-27T01:14:08.7454  2018-02-08 19:18:34.468038   \n",
+      "2  2017-11-27T01:14:21.395055  2018-02-07 23:39:33.852671   \n",
+      "3  2018-02-11 00:46:42.632962  2018-02-11 00:14:20.346838   \n",
+      "4  2017-11-10T11:18:44.524042  2018-02-07 23:39:33.852671   \n",
+      "\n",
+      "                   updated_at  \\\n",
+      "0  2018-02-08 19:18:34.468066   \n",
+      "1  2018-02-08 19:18:34.468066   \n",
+      "2  2018-02-07 23:39:33.852696   \n",
+      "3  2018-02-11 00:14:20.346871   \n",
+      "4  2018-02-07 23:39:33.852696   \n",
+      "\n",
+      "                                               title authors keywords  \\\n",
+      "0                                 Iran News Round Up     NaN      NaN   \n",
+      "1  The Cost Of The Best Senate Banking Committee ...     NaN      NaN   \n",
+      "2  Man Awoken From 27-Year Coma Commits Suicide A...     NaN      NaN   \n",
+      "3  Opening a Gateway for Girls to Enter the Compu...     NaN      NaN   \n",
+      "4  100 Compiled Studies on Vaccine Dangers – Infi...     NaN      NaN   \n",
+      "\n",
+      "                                       meta_keywords  \\\n",
+      "0  ['National Review', 'National Review Online', ...   \n",
+      "1                                               ['']   \n",
+      "2                                               ['']   \n",
+      "3  ['Computers and the Internet', 'Women and Girl...   \n",
+      "4                                               ['']   \n",
+      "\n",
+      "                                    meta_description  \\\n",
+      "0                                                NaN   \n",
+      "1                                                NaN   \n",
+      "2                                                NaN   \n",
+      "3  WHEN Julia Geist was asked to draw a picture o...   \n",
+      "4                                                NaN   \n",
+      "\n",
+      "                                                tags summary   source  \n",
+      "0                                                NaN     NaN      NaN  \n",
+      "1                                                NaN     NaN      NaN  \n",
+      "2                                                NaN     NaN      NaN  \n",
+      "3                                                NaN     NaN  nytimes  \n",
+      "4  Lymphoma, Hepatitis B, Immune System, Health, ...     NaN      NaN  \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dask_df.head())\n",
+    "\n",
+    "# clean the data \n",
+    "\n",
+    "dask_df['content'] = dask_df['content'].map(cleanText)\n",
+    "result = dask_df.compute()\n",
+    "print(result.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Unnamed: 0         id               domain        type  \\\n",
+      "0        732  7444726.0   nationalreview.com   political   \n",
+      "1       1348  6213642.0    beforeitsnews.com        fake   \n",
+      "2       7119  3867639.0     dailycurrant.com      satire   \n",
+      "3       1518  9560791.0          nytimes.com    reliable   \n",
+      "4       9345  2059625.0  infiniteunknown.net  conspiracy   \n",
+      "\n",
+      "                                                 url  \\\n",
+      "0  http://www.nationalreview.com/node/152734/%E2%...   \n",
+      "1  http://beforeitsnews.com/economy/2012/06/the-c...   \n",
+      "2  http://dailycurrant.com/2016/01/18/man-awoken-...   \n",
+      "3  https://query.nytimes.com/gst/fullpage.html?re...   \n",
+      "4  http://www.infiniteunknown.net/2011/09/14/100-...   \n",
+      "\n",
+      "                                             content  \\\n",
+      "0  plus one article on google plus thanks to ali ...   \n",
+      "1  the cost of the best senate banking committee ...   \n",
+      "2  man awoken from NUMyear coma commits suicide a...   \n",
+      "3  when julia geist was asked to draw a picture o...   \n",
+      "4   NUM compiled studies on vaccine dangers activ...   \n",
+      "\n",
+      "                   scraped_at                 inserted_at  \\\n",
+      "0  2017-11-27T01:14:42.983556  2018-02-08 19:18:34.468038   \n",
+      "1    2017-11-27T01:14:08.7454  2018-02-08 19:18:34.468038   \n",
+      "2  2017-11-27T01:14:21.395055  2018-02-07 23:39:33.852671   \n",
+      "3  2018-02-11 00:46:42.632962  2018-02-11 00:14:20.346838   \n",
+      "4  2017-11-10T11:18:44.524042  2018-02-07 23:39:33.852671   \n",
+      "\n",
+      "                   updated_at  \\\n",
+      "0  2018-02-08 19:18:34.468066   \n",
+      "1  2018-02-08 19:18:34.468066   \n",
+      "2  2018-02-07 23:39:33.852696   \n",
+      "3  2018-02-11 00:14:20.346871   \n",
+      "4  2018-02-07 23:39:33.852696   \n",
+      "\n",
+      "                                               title authors keywords  \\\n",
+      "0                                 Iran News Round Up     NaN      NaN   \n",
+      "1  The Cost Of The Best Senate Banking Committee ...     NaN      NaN   \n",
+      "2  Man Awoken From 27-Year Coma Commits Suicide A...     NaN      NaN   \n",
+      "3  Opening a Gateway for Girls to Enter the Compu...     NaN      NaN   \n",
+      "4  100 Compiled Studies on Vaccine Dangers – Infi...     NaN      NaN   \n",
+      "\n",
+      "                                       meta_keywords  \\\n",
+      "0  ['National Review', 'National Review Online', ...   \n",
+      "1                                               ['']   \n",
+      "2                                               ['']   \n",
+      "3  ['Computers and the Internet', 'Women and Girl...   \n",
+      "4                                               ['']   \n",
+      "\n",
+      "                                    meta_description  \\\n",
+      "0                                                NaN   \n",
+      "1                                                NaN   \n",
+      "2                                                NaN   \n",
+      "3  WHEN Julia Geist was asked to draw a picture o...   \n",
+      "4                                                NaN   \n",
+      "\n",
+      "                                                tags summary   source  \n",
+      "0                                                NaN     NaN      NaN  \n",
+      "1                                                NaN     NaN      NaN  \n",
+      "2                                                NaN     NaN      NaN  \n",
+      "3                                                NaN     NaN  nytimes  \n",
+      "4  Lymphoma, Hepatitis B, Immune System, Health, ...     NaN      NaN  \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(result.head())\n",
     "\n",
     "# pattern_URL = r'(http|https)://[^\\s]*'\n",
     "# pattern_NUM = r'\\d+'\n",
@@ -102,20 +345,20 @@
     "# for content in data['content']:\n",
     "#     number_of_numbers += len(re.findall(pattern_NUM, content))\n",
     "\n",
-    "def process_part_of_data(data):\n",
-    "    data['content'] = data['content'].apply(cleanText)\n",
-    "    return data\n",
+    "# def process_part_of_data(data):\n",
+    "#     data['content'] = data['content'].apply(cleanText)\n",
+    "#     return data\n",
     "\n",
     "\n",
-    "chunk_size = 9950\n",
+    "# chunk_size = 9950\n",
     "\n",
-    "chunks = list(pd.read_csv('995,000_rows.csv', chunksize=chunk_size))\n",
-    "# print(\"number of chunks: \", len(chunks))\n",
+    "# chunks = list(pd.read_csv('995,000_rows.csv', chunksize=chunk_size))\n",
+    "# # print(\"number of chunks: \", len(chunks))\n",
     "\n",
-    "with Pool() as pool:\n",
-    "    final_chunks = pool.map(process_part_of_data, chunks)\n",
+    "# with Pool() as pool:\n",
+    "#     final_chunks = pool.map(process_part_of_data, chunks)\n",
     "\n",
-    "final_data = pd.concat(final_chunks)\n",
+    "# final_data = pd.concat(final_chunks)\n",
     "\n",
     "# for chunk in pd.read_csv('995,000_rows.csv', chunksize=chunk_size):\n",
     "#     with Pool(4) as p:\n",
@@ -128,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
