--- a/src/FakeNewsBigData.ipynb
+++ b/src/FakeNewsBigData.ipynb
@@ -373,9 +373,46 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
    "source": [
-    "# print(data['content'].head(10))"
+    "# print(data['content'].head(10))\n",
+    "\n",
+    "def maxProductSorted(nums):\n",
+    "    if not nums:\n",
+    "        return 0\n",
+    "\n",
+    "    n = len(nums)\n",
+    "    if n == 1:\n",
+    "        return nums[0]\n",
+    "\n",
+    "    max_product = nums[0]\n",
+    "    min_product = nums[0]\n",
+    "    result = max_product\n",
+    "\n",
+    "    for i in range(1, n):\n",
+    "        if nums[i] < 0:\n",
+    "            max_product, min_product = min_product, max_product\n",
+    "        max_product = max(nums[i], max_product * nums[i])\n",
+    "        min_product = min(nums[i], min_product * nums[i])\n",
+    "\n",
+    "        result = max(result, max_product)\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "# Example usage:\n",
+    "sorted_nums1 = [-3, -2, -1, 0, 1, 2, 3]\n",
+    "sorted_nums = [-5, 0.5]\n",
+    "\n",
+    "result = maxProductSorted(sorted_nums1)\n",
+    "print(result)"
    ]
   }
  ],
