Updated stemming to add a space when joining

--- a/src/FakeNewsBigData.ipynb
+++ b/src/FakeNewsBigData.ipynb
@@ -20,7 +20,15 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the shape of the data is:  (995000, 17)\n"
+     ]
+    }
+   ],
    "source": [
     "data = pd.read_csv(\"995,000_rows.csv\", dtype=\"string\")\n",
     "\n",
@@ -31,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,31 +152,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "stemmer = PorterStemmer()\n",
-    "stemmed_data = data_cleaned['content'].apply(lambda x:''.join([stemmer.stem(word) for word in nltk.word_tokenize(x)]))"
+    "stemmed_data = data_cleaned['content'].apply(lambda x:' '.join([stemmer.stem(word) for word in nltk.word_tokenize(x)]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'stemmed_data' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/home/marcus/school/datsci/Fake-News-GDS/src/FakeNewsBigData.ipynb Cell 6\u001b[0m line \u001b[0;36m1\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/marcus/school/datsci/Fake-News-GDS/src/FakeNewsBigData.ipynb#W5sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# tokenizing content\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/marcus/school/datsci/Fake-News-GDS/src/FakeNewsBigData.ipynb#W5sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39m# tokens = data_cleaned['content'].apply(nltk.word_tokenize)\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/marcus/school/datsci/Fake-News-GDS/src/FakeNewsBigData.ipynb#W5sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/marcus/school/datsci/Fake-News-GDS/src/FakeNewsBigData.ipynb#W5sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m \u001b[39m#             filtered_words.append(w)\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/marcus/school/datsci/Fake-News-GDS/src/FakeNewsBigData.ipynb#W5sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m \u001b[39m#     filtered_tokens.append(filtered_words)\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/marcus/school/datsci/Fake-News-GDS/src/FakeNewsBigData.ipynb#W5sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m stemmed_data\u001b[39m.\u001b[39mhead(\u001b[39m5\u001b[39m)\u001b[39m.\u001b[39mto_csv(\u001b[39m\"\u001b[39m\u001b[39m995,000_stemmed.csv\u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'stemmed_data' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# tokenizing content\n",
     "# tokens = data_cleaned['content'].apply(nltk.word_tokenize)\n",
@@ -189,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
