--- a/src/FakeNewsBigData.ipynb
+++ b/src/FakeNewsBigData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,11 +26,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "data = pd.read_csv('995,000_rows.csv',dtype = str)\n",
+    "\n",
+    "first_10 = data.head(10)\n",
     "\n",
     "# print(data.head())\n",
     "\n",
@@ -87,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -289,34 +291,178 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print(first_10['content'])\n",
+    "# first_10['content'] = first_10['content'].astype(str)\n",
+    "# # convert to csv\n",
+    "# # first_10.to_csv('first_10.csv', index=False)\n",
+    "\n",
+    "# # # lower case\n",
+    "# first_10['content'] = first_10['content'].str.lower()\n",
+    "\n",
+    "# # # should not contain multiple spaces, tabs or newlines\n",
+    "# first_10['content'] = first_10['content'].str.replace(r'[\\s\\xa0]+', ' ', regex=True)\n",
+    "\n",
+    "# # remove punctuation\n",
+    "# first_10['content'] = first_10['content'].str.replace(r'[^\\w\\s]', '', regex=True)\n",
+    "\n",
+    "# first_10.to_csv('first_10_cleaned.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total rows: 995000\n",
-      "Total rows after removing empty content: 994988\n"
+      "Total rows after removing missing values: 947214\n",
+      "finished cleaning the data\n"
      ]
     }
    ],
    "source": [
-    "print('Total rows:', total_rows)\n",
-    "\n",
-    "# remove emtpy content fields \n",
-    "data = data.dropna(subset=['content'])\n",
-    "print('Total rows after removing empty content:', data.shape[0])\n",
+    "# print('Total rows:', total_rows)\n",
+    "data['content'] = data['content'].astype(str)\n",
+    "# remove the rows with missing values in the 'type' column and in the 'content' column\n",
+    "data = data.dropna(subset=['type', 'content'])\n",
+    "print('Total rows after removing missing values:', data.shape[0])\n",
     "\n",
     "# likely have to tokenize and stem the data like in the previous assignment, and then remove stopwords and count the vocabulary size\n",
-    "data['content'] = data['content'].apply(cleanText)\n",
+    "# data['content'] = data['content'].apply(cleanText)\n",
+    "\n",
+    "# convert the first 50 rows to a csv file\n",
+    "data.head(50).to_csv('before_cleaning.csv', index=False)\n",
+    "\n",
+    "\n",
+    "# try cleaning it using the vectorized string methods\n",
+    "data['content'] = data['content'].str.lower()\n",
+    "# should not contain multiple spaces, tabs or newlines\n",
+    "# text = re.sub(r'\\s+', ' ', text)\n",
+    "data['content'] = data['content'].str.replace(r'\\s+', ' ', regex=True)\n",
+    "\n",
+    "# data.head(50).to_csv('aftercleaning_cleaning.csv', index=False)\n",
+    "# replace dates with <DATE>\n",
+    "date_pattern = r'\\b(?:jan(?:uary)?|feb(?:ruary)?|mar(?:ch)?|apr(?:il)?|may|jun(?:e)?|jul(?:y)?|aug(?:ust)?|sep(?:tember)?|oct(?:ober)?|nov(?:ember)?|dec(?:ember)?)\\s+\\d{1,2}(?:,\\s+|\\s+)\\d{4}\\b|\\b\\d{4}-\\d{2}-\\d{2}\\b'\n",
+    "\n",
+    "# date_pattern = r'\\b(?:jan(?:uary)?|feb(?:ruary)?|mar(?:ch)?|apr(?:il)?|may|jun(?:e)?|jul(?:y)?|aug(?:ust)?|sep(?:tember)?|oct(?:ober)?|nov(?:ember)?|dec(?:ember)?)\\s+\\d{1,2},\\s+\\d{4}\\b|\\b\\d{4}-\\d{2}-\\d{2}\\b'\n",
+    "# text = re.sub(date_pattern, '<DATE>', text)\n",
+    "data['content'] = data['content'].str.replace(date_pattern, '<DATE>', regex=True)\n",
+    "# nov. 5\n",
+    "date_pattern2 = r'\\b(?:jan(?:uary)?|feb(?:ruary)?|mar(?:ch)?|apr(?:il)?|may|jun(?:e)?|jul(?:y)?|aug(?:ust)?|sep(?:tember)?|oct(?:ober)?|nov(?:ember)?|dec(?:ember)?)\\.\\s+\\d{1,2}\\b'\n",
+    "# text = re.sub(date_pattern2, '<DATE>', text)\n",
+    "data['content'] = data['content'].str.replace(date_pattern2, '<DATE>', regex=True)\n",
+    "\n",
+    "# replace numbers with <NUM>\n",
+    "# text = re.sub(r'\\d+', '<NUM>', text)\n",
+    "data['content'] = data['content'].str.replace(r'\\d+', '<NUM>', regex=True)\n",
+    "\n",
+    "\n",
+    "# replace urls with <URL>\n",
+    "# text = re.sub(r'(http|https)://[^\\s]*', '<URL>', text)\n",
+    "data['content'] = data['content'].str.replace(r'(http|https)://[^\\s]*', '<URL>', regex=True)\n",
+    "\n",
+    "# replace emails with <EMAIL>\n",
+    "# text = re.sub(r'\\b[\\w\\.-]+@[\\w\\.-]+\\.\\w{2,4}\\b', '<EMAIL>', text)\n",
+    "data['content'] = data['content'].str.replace(r'\\b[\\w\\.-]+@[\\w\\.-]+\\.\\w{2,4}\\b', '<EMAIL>', regex=True)\n",
+    "\n",
+    "# remove punctuation\n",
+    "# text = re.sub(r'[^\\w\\s]', '', text)\n",
+    "data['content'] = data['content'].str.replace(r'[^\\w\\s]', '', regex=True)\n",
+    "\n",
+    "data.head(50).to_csv('aftercleaning_cleaning.csv', index=False)\n",
+    "\n",
+    "print(\"finished cleaning the data\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tokenize the data\n",
+    "data['tokens'] = data['content'].apply(nltk.word_tokenize)\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# nltk.download('snowball_data')\n",
+    "# stem the data\n",
+    "from nltk.stem.snowball import SnowballStemmer\n",
+    "\n",
+    "stop_words = set(stopwords.words('english'))\n",
+    "stemmer = SnowballStemmer(\"english\")\n",
+    "# stemmed_data = [stemmer.stem(token) for token in filtered_tokens]\n",
+    "def process_tokens(tokens):\n",
+    "    # remove stopwords\n",
+    "    filtered_tokens = [token for token in tokens if token not in stop_words]\n",
+    "\n",
+    "    # stemming\n",
+    "    stemmed_tokens = [stemmer.stem(token) for token in filtered_tokens]\n",
+    "\n",
+    "    return stemmed_tokens\n",
+    "\n",
+    "# remove stopwords\n",
+    "stop_words = set(stopwords.words('english'))\n",
+    "# filtered_tokens = [token for token in tokens if token not in stop_words]\n",
+    "data['processed_tokens'] = data['tokens'].apply(process_tokens)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# convert the first 50 rows to a csv file\n",
+    "data.head(50).to_csv('cleaned_Bigdata.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['Unnamed: 0', 'id', 'domain', 'type', 'url', 'content', 'scraped_at',\n",
+      "       'inserted_at', 'updated_at', 'title', 'authors', 'keywords',\n",
+      "       'meta_keywords', 'meta_description', 'tags', 'summary', 'source'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
