--- a/src/FakeNewsBigData.ipynb
+++ b/src/FakeNewsBigData.ipynb
@@ -786,9 +786,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy:  0.8735107591920525\n"
+     ]
+    }
+   ],
    "source": [
     "y_pred = logistic_model.predict(X_val)\n",
     "accuracy = accuracy_score(y_val, y_pred)\n",
