--- a/src/FakeNewsBigData.ipynb
+++ b/src/FakeNewsBigData.ipynb
@@ -91,33 +91,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "URLs: 215615.0\n",
-      "NUMs: 10621381.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "# print(data.head())\n",
-    "\n",
-    "# counting the number of URLs in the content\n",
-    "URL_count = data['content'].str.count(r'(http|https)://[^\\s]*').sum()\n",
-    "print('URLs:', URL_count)\n",
-    "\n",
-    "# counting the number of numeric values in the content\n",
-    "NUM_count = data['content'].str.count(r'\\d+').sum()\n",
-    "print('NUMs:', NUM_count)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -406,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -416,8 +389,7 @@
       "finished stemming the data\n",
       "Index(['Unnamed: 0', 'id', 'domain', 'type', 'url', 'content', 'scraped_at',\n",
       "       'inserted_at', 'updated_at', 'title', 'authors', 'keywords',\n",
-      "       'meta_keywords', 'meta_description', 'tags', 'summary', 'source',\n",
-      "       'tokens', 'processed_tokens'],\n",
+      "       'meta_keywords', 'meta_description', 'tags', 'summary', 'source'],\n",
       "      dtype='object')\n"
      ]
     }
@@ -453,16 +425,56 @@
     "# first_1000['content'] = first_1000['content'].apply(cleanText)\n",
     "# first_1000['tokens'] = first_1000['content'].apply(nltk.word_tokenize)\n",
     "# first_1000['processed_tokens'] = first_1000['tokens'].apply(process_tokens).apply(lambda x: ' '.join(x))\n",
-    "data['processed_tokens'] = data['tokens'].apply(process_tokens).apply(lambda x: ' '.join(x))\n",
+    "\n",
+    "# other good data\n",
+    "# data['processed_tokens'] = data['tokens'].apply(process_tokens).apply(lambda x: ' '.join(x))\n",
     "\n",
     "# read the cleaned_stemmed file to test it all\n",
-    "# cleaned_stemmed = pd.read_csv('995,000_cleaned_stemmed2.csv', dtype=str)\n",
+    "cleaned_stemmed = pd.read_csv('995,000_cleaned_stemmed2.csv', dtype=str)\n",
     "\n",
     "# remove rows that have empty 'content' or empty 'type' from the cleaned_stemmed file\n",
     "# cleaned_stemmed = cleaned_stemmed.dropna(subset=['content', 'type'])\n",
     "print(\"finished stemming the data\")\n",
     "print(data.columns)\n",
     "# print(cleaned_stemmed.columns)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total rows after removing missing values: 691768\n",
+      "type\n",
+      "reliable    440493\n",
+      "fake        251275\n",
+      "Name: count, dtype: int64\n",
+      "Reliable percent: 63.6764059626927\n"
+     ]
+    }
+   ],
+   "source": [
+    "cleaned_stemmed = cleaned_stemmed.dropna(subset=['type', 'content'])\n",
+    "\n",
+    "# replace 'political' and 'clickbait' with 'reliable'\n",
+    "cleaned_stemmed['type'] = cleaned_stemmed['type'].replace(['political', 'clickbait'], 'reliable')\n",
+    "\n",
+    "# replace 'bias' and 'satite' with 'fake'\n",
+    "cleaned_stemmed['type'] = cleaned_stemmed['type'].replace(['bias', 'satire'], 'fake')\n",
+    "#  remove all the other types of news except 'reliable' and 'fake'\n",
+    "cleaned_stemmed = cleaned_stemmed[cleaned_stemmed['type'].isin(['reliable', 'fake'])]\n",
+    "\n",
+    "print('Total rows after removing missing values:', cleaned_stemmed.shape[0]) \n",
+    "\n",
+    "print(cleaned_stemmed['type'].value_counts())\n",
+    "\n",
+    "# percent reliable\n",
+    "reliable_percent = cleaned_stemmed['type'].value_counts()['reliable'] / cleaned_stemmed.shape[0] * 100\n",
+    "print('Reliable percent:', reliable_percent)"
    ]
   },
   {
@@ -553,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -561,14 +573,17 @@
     "# from nltk.stem import PorterStemmer\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "\n",
+    "\n",
+    "\n",
     "CountVectorizer = CountVectorizer()\n",
     "\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "# X = CountVectorizer.fit_transform(cleaned_stemmed['content'])\n",
-    "X = CountVectorizer.fit_transform(data['processed_tokens'])\n",
+    "X = CountVectorizer.fit_transform(cleaned_stemmed['content'])\n",
+    "# X = CountVectorizer.fit_transform(data['processed_tokens'])\n",
     "\n",
-    "X_train, X_test_1, y_train, y_test_1  = train_test_split(X, data['type'], test_size=0.2, random_state=42)\n",
+    "\n",
+    "X_train, X_test_1, y_train, y_test_1  = train_test_split(X, cleaned_stemmed['type'], test_size=0.2, random_state=42)\n",
     "X_val, X_test, y_val, y_test = train_test_split(X_test_1, y_test_1, test_size=0.5, random_state=42)\n",
     "\n",
     "# print(\"X_train: \", X_train)"
@@ -576,9 +591,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\atta_\\anaconda3\\Lib\\site-packages\\sklearn\\linear_model\\_logistic.py:460: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -588,7 +617,7 @@
        "LogisticRegression(max_iter=2000, random_state=42)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -597,7 +626,7 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
-    "logistic_model = LogisticRegression(max_iter=2000, random_state=42)\n",
+    "logistic_model = LogisticRegression(max_iter=3000, random_state=42)\n",
     "\n",
     "scale = StandardScaler(with_mean=False)\n",
     "\n",
@@ -609,14 +638,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "accuracy:  0.8724008947889544\n"
+      "accuracy:  0.8275149254810125\n"
      ]
     }
    ],
@@ -633,29 +662,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# now trying a different model\n",
+    "\n",
+    "from sklearn import svm\n",
+    "\n",
+    "clf = svm.SVC(kernel='linear') \n",
+    "\n",
+    "clf.fit(X_train, y_train)\n",
+    "\n",
+    "y_pred = clf.predict(X_val)\n",
+    "\n",
+    "accuracy = accuracy_score(y_val, y_pred)\n",
+    "print(\"accuracy: \", accuracy)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# trying a different model\n",
+    "\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "\n",
+    "tfidvec = TfidfVectorizer(stop_words='english',max_df=0.7) #max_df=0.7 means that we ignore terms that appear in more than 70% of the documents, and only focus on the less frequent ones, which could be more informative\n",
+    "X = tfidvec.fit_transform(cleaned_stemmed['content'])\n",
+    "\n",
+    "X_train, X_test_1, t_train, t_test_1  = train_test_split(X, cleaned_stemmed['type'], test_size=0.2, random_state=42)\n",
+    "X_val, X_test, t_val, t_test = train_test_split(X_test_1, t_test_1, test_size=0.5, random_state=42)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# naive bayes\n",
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "naive = MultinomialNB()\n",
+    "naive.fit(X_train, t_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = naive.predict(X_val)\n",
+    "\n",
+    "accuracy = accuracy_score(t_val, y_pred)\n",
+    "print(\"accuracy: \", accuracy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "percent reliable:  80.76868069001937\n",
-      "percent fake:  19.231319309980638\n"
+      "percent reliable:  63.6764059626927\n",
+      "percent fake:  36.3235940373073\n"
      ]
     }
    ],
    "source": [
     "# check percent of reliable in data\n",
-    "number_of_reliable = data['type'].value_counts()['reliable']\n",
-    "number_of_fake = data['type'].value_counts()['fake']\n",
+    "number_of_reliable = cleaned_stemmed['type'].value_counts()['reliable']\n",
+    "number_of_fake = cleaned_stemmed['type'].value_counts()['fake']\n",
     "\n",
     "percent_reliable = number_of_reliable / (number_of_reliable + number_of_fake) * 100\n",
     "print(\"percent reliable: \", percent_reliable)\n",
