--- a/src/FakeNewsBigData.ipynb
+++ b/src/FakeNewsBigData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -644,29 +644,33 @@
     "scale = StandardScaler(with_mean=False)\n",
     "\n",
     "X_train = scale.fit_transform(X_train)\n",
-    "X_val = scale.transform(X_val)\n",
+    "X_test = scale.transform(X_test)\n",
     "\n",
     "logistic_model.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "accuracy:  0.8247105251745522\n"
+     "ename": "NameError",
+     "evalue": "name 'logistic_model' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[16], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmetrics\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m accuracy_score, precision_score, recall_score, f1_score\n\u001b[1;32m----> 3\u001b[0m y_pred \u001b[38;5;241m=\u001b[39m logistic_model\u001b[38;5;241m.\u001b[39mpredict(X_test)\n\u001b[0;32m      4\u001b[0m accuracy \u001b[38;5;241m=\u001b[39m accuracy_score(y_test, y_pred)\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124maccuracy: \u001b[39m\u001b[38;5;124m\"\u001b[39m, accuracy)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'logistic_model' is not defined"
      ]
     }
    ],
    "source": [
     "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
     "\n",
-    "y_pred = logistic_model.predict(X_val)\n",
-    "accuracy = accuracy_score(y_val, y_pred)\n",
+    "y_pred = logistic_model.predict(X_test)\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
     "print(\"accuracy: \", accuracy)\n",
     "# print(\"precision score: \", precision_score(y_val, y_pred, average='weighted'))\n",
     "# print(\"recall score: \", recall_score(y_val, y_pred, average='weighted'))\n",
@@ -705,43 +709,91 @@
     "\n",
     "clf.fit(X_train, y_train)\n",
     "\n",
-    "y_pred = clf.predict(X_val)\n",
+    "y_pred = clf.predict(X_test)\n",
     "\n",
-    "accuracy = accuracy_score(y_val, y_pred)\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
     "print(\"accuracy: \", accuracy)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>#sk-container-id-1 {color: black;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>RandomForestClassifier(n_jobs=-1, random_state=42)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">RandomForestClassifier</label><div class=\"sk-toggleable__content\"><pre>RandomForestClassifier(n_jobs=-1, random_state=42)</pre></div></div></div></div></div>"
+      ],
+      "text/plain": [
+       "RandomForestClassifier(n_jobs=-1, random_state=42)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# trying a different model\n",
-    "\n",
-    "\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
     "tfidvec = TfidfVectorizer(stop_words='english',max_df=0.7) #max_df=0.7 means that we ignore terms that appear in more than 70% of the documents, and only focus on the less frequent ones, which could be more informative\n",
-    "X = tfidvec.fit_transform(cleaned_stemmed['content'])\n",
     "\n",
-    "X_train, X_test_1, t_train, t_test_1  = train_test_split(X, cleaned_stemmed['type'], test_size=0.2, random_state=42)\n",
-    "X_val, X_test, t_val, t_test = train_test_split(X_test_1, t_test_1, test_size=0.5, random_state=42)\n",
+    "# taking only a quearter of the data to speed up the process \n",
+    "\n",
+    "quarter_cleaned_stemmed = cleaned_stemmed.sample(frac=0.25, random_state=42)\n",
+    "\n",
+    "\n",
+    "# X = tfidvec.fit_transform(cleaned_stemmed['content'])\n",
+    "X = tfidvec.fit_transform(quarter_cleaned_stemmed['content'])\n",
+    "\n",
+    "\n",
+    "X_train, X_test_1, y_train, y_test_1  = train_test_split(X, quarter_cleaned_stemmed['type'], test_size=0.2, random_state=42)\n",
+    "X_val, X_test, y_val, y_test = train_test_split(X_test_1, y_test_1, test_size=0.5, random_state=42)\n",
     "\n",
     "# trying a neural network\n",
-    "from tensorflow.keras.models import Sequential #remember to pip install tensorflow\n",
-    "from tensorflow.keras.layers import Dense, Embedding, Conv1D, GlobalMaxPooling1D\n",
+    "# from tensorflow.keras.models import Sequential #remember to pip install tensorflow\n",
+    "# from tensorflow.keras.layers import Dense, Embedding, Conv1D, GlobalMaxPooling1D\n",
     "\n",
-    "model = Sequential([\n",
-    "    Embedding(input_dim=5000, output_dim=50, input_length=max_length),\n",
-    "    Conv1D(filters=64, kernel_size=5, activation='relu'),\n",
-    "    GlobalMaxPooling1D(),\n",
-    "    Dense(64, activation='relu'),\n",
-    "    Dense(1, activation='sigmoid')\n",
-    "])\n",
+    "# model = Sequential([\n",
+    "#     Embedding(input_dim=5000, output_dim=50, input_length=max_length),\n",
+    "#     Conv1D(filters=64, kernel_size=5, activation='relu'),\n",
+    "#     GlobalMaxPooling1D(),\n",
+    "#     Dense(64, activation='relu'),\n",
+    "#     Dense(1, activation='sigmoid')\n",
+    "# ])\n",
     "\n",
-    "model.compile(loss='binary_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
-    "model.summary()\n",
+    "# model.compile(loss='binary_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
+    "# model.summary()\n",
+    "\n",
+    "# trying a random forest model classifier\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "clf = RandomForestClassifier(random_state=42, n_estimators=100, n_jobs = -1)\n",
+    "clf.fit(X_train, y_train)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy:  0.8540618675917895\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "y_pred = clf.predict(X_test)\n",
+    "print(\"accuracy: \", accuracy_score(y_test, y_pred))"
    ]
   },
   {
@@ -788,6 +840,88 @@
     "\n",
     "accuracy = accuracy_score(y_val, y_pred)\n",
     "print(\"accuracy: \", accuracy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\atta_\\anaconda3\\Lib\\site-packages\\sklearn\\neural_network\\_multilayer_perceptron.py:698: UserWarning: Training interrupted by user.\n",
+      "  warnings.warn(\"Training interrupted by user.\")\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy:  0.8655680832610582\n"
+     ]
+    }
+   ],
+   "source": [
+    "# trying a different model\n",
+    "\n",
+    "from sklearn.neural_network import MLPClassifier\n",
+    "\n",
+    "mlp = MLPClassifier(random_state=42, max_iter=500, hidden_layer_sizes=(50,50,50))\n",
+    "\n",
+    "mlp.fit(X_train, y_train)\n",
+    "\n",
+    "y_pred = mlp.predict(X_test)\n",
+    "\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "print(\"accuracy: \", accuracy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# trying a CNN model\n",
+    "\n",
+    "# from tensorflow.keras.preprocessing.text import Tokenizer\n",
+    "# from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
+    "# from tensorflow.keras.models import Sequential #remember to pip install tensorflow\n",
+    "# from tensorflow.keras.layers import Dense, Embedding, Conv1D, GlobalMaxPooling1D\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# tokenizer = Tokenizer(num_words=5000, oov_token='<OOV>')\n",
+    "# tokenizer.fit_on_texts(cleaned_stemmed['content'])\n",
+    "# sequences = tokenizer.texts_to_sequences(cleaned_stemmed['content'])\n",
+    "\n",
+    "# max_length = max([len(seq) for seq in sequences])\n",
+    "# X = pad_sequences(sequences, maxlen=max_length, padding='post')\n",
+    "\n",
+    "# X_train, X_test_1, y_train, y_test_1  = train_test_split(X, cleaned_stemmed['type'], test_size=0.2, random_state=42)\n",
+    "# X_val, X_test, y_val, y_test = train_test_split(X_test_1, y_test_1, test_size=0.5, random_state=42)\n",
+    "\n",
+    "# model = Sequential([\n",
+    "#     Embedding(input_dim=5000, output_dim=128, input_length=max_length),\n",
+    "#     Conv1D(filters=64, kernel_size=5, activation='relu'),\n",
+    "#     GlobalMaxPooling1D(),\n",
+    "#     Dense(64, activation='relu'),\n",
+    "#     Dense(1, activation='sigmoid')\n",
+    "# ])\n",
+    "\n",
+    "# model = Sequential([\n",
+    "#     Embedding(input_dim=5000, output_dim=50, input_length=max_length),\n",
+    "#     Conv1D(filters=64, kernel_size=5, activation='relu'),\n",
+    "#     GlobalMaxPooling1D(),\n",
+    "#     Dense(64, activation='relu'),\n",
+    "#     Dense(1, activation='sigmoid')\n",
+    "# ])\n",
+    "\n",
+    "# model.compile(loss='binary_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
+    "# model.summary()"
    ]
   },
   {
