--- a/src/FinalFakeNewsBigData.ipynb
+++ b/src/FinalFakeNewsBigData.ipynb
@@ -4,19 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'modin'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 26\u001b[0m\n\u001b[0;32m     22\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpreprocessing\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m StandardScaler\n\u001b[0;32m     24\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmetrics\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m accuracy_score, precision_score, recall_score, f1_score, confusion_matrix\n\u001b[1;32m---> 26\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmodin\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mmpd\u001b[39;00m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'modin'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# all the necessary imports\n",
     "import re\n",
@@ -43,7 +31,7 @@
     "\n",
     "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, confusion_matrix\n",
     "\n",
-    "import modin.pandas as mpd\n"
+    "# import modin.pandas as mpd\n"
    ]
   },
   {
@@ -52,7 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = mpd.read_csv('995,000_rows.csv',dtype = str)"
+    "data = pd.read_csv('995,000_rows.csv',dtype = str)"
    ]
   },
   {
@@ -212,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +218,7 @@
    ],
    "source": [
     "# reading the other cleaned data\n",
-    "cleaned_stemmed = mpd.read_csv('995,000_cleaned_stemmed2.csv', dtype=str)\n",
+    "cleaned_stemmed = pd.read_csv('995,000_cleaned_stemmed2.csv', dtype=str)\n",
     "\n",
     "cleaned_stemmed = cleaned_stemmed.dropna(subset=['type', 'content'])\n",
     "\n",
@@ -253,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +274,7 @@
    "outputs": [],
    "source": [
     "# read the liad tsv file\n",
-    "liar_data_test = mpd.read_csv('LIARDATASET/train.tsv', sep='\\t', header=None)\n",
+    "liar_data_test = pd.read_csv('LIARDATASET/train.tsv', sep='\\t', header=None)\n",
     "\n",
     "# only keep the 'true' and 'false' labels\n",
     "liar_data_test = liar_data_test[liar_data_test[1].isin(['true', 'false'])]\n",
