--- a/src/FinalFakeNewsBigData.ipynb
+++ b/src/FinalFakeNewsBigData.ipynb
@@ -194,8 +194,8 @@
     "\n",
     "    return stemmed_tokens\n",
     "\n",
-    "data['processed_tokens'] = data['tokens'].apply(process_tokens).apply(lambda x: ' '.join(x))\n",
-    "# data['processed_tokens'] = data['content'].apply(lambda x:' '.join([stemmer.stem(word) for word in nltk.word_tokenize(x)]))"
+    "# data['processed_tokens'] = data['tokens'].apply(process_tokens).apply(lambda x: ' '.join(x))\n",
+    "data['processed_tokens'] = data['content'].apply(lambda x:' '.join([stemmer.stem(word) for word in nltk.word_tokenize(x)]))"
    ]
   },
   {
